users/static/css/style.scss
/* ... */
// #header {
//     display: flex;
//     justify-content: space-between;
//     align-items: center;
//     padding: 0;
//     border-bottom: 1px solid $gray-600;
//     box-shadow: 0 1px 4px 0 $gray-600;
//     background-color: $gray-800;
//     color: $gray-100;

//     a {
//         color: $blue3;
//         text-transform: capitalize;
//     }

//     #main-logo-wrapper {
//         display: flex;

//         span { display: block; }

//         #main-header-user-info {
//             display: flex;
//             flex-direction: column;
//             justify-content: space-evenly;
//             margin-left: 12px;
//         }
//     }
// }

input[readonly]{
    background-color: white !important;
}

a.disabled {
    pointer-events: none;
    opacity: 0.65;
}

.btn-outline-light {
    color: $gray-700;
}

.table,
.table-sm {
    color: $gray-800;

    thead tr:first-child th {
        border-top-width: 0;
    }

    th {
        font-size: 14px;
        letter-spacing: 0.5px;
        text-transform: uppercase;
        font-weight: 600;
    }

    :is(td, th) {
        vertical-align: middle;
    }
}

.prefs-form-btn {
    display: flex;
    align-items: end;
    padding-bottom: calc(1rem + 2px);
}

.f_14 { font-size: 14px; }
.f_20 { font-size: 20px; }
.f_22 { font-size: 22px; }
.fs-common { font-size: 0.875rem; }
.fw_600 { font-weight: 600 !important; }
.h_fit_content { height: fit-content; }
.w-40 { width: 40% !important; }
.w-60 { width: 60% !important; }
.w-unset { width: unset !important; }
.h-unset { height: unset !important; }
.w-max-content { width: max-content !important; }

ul.timeline {
    list-style-type: none;
    position: relative;

    &:before {
        content: ' ';
        background: $blue0;
        display: inline-block;
        position: absolute;
        left: 29px;
        width: 2px;
        height: 100%;
        z-index: 400;
    }
    & > li {
        margin: 20px 0;
        padding-left: 20px;

        &:before {
            content: ' ';
            background: $white;
            display: inline-block;
            position: absolute;
            border-radius: 50%;
            border: 3px solid $blue3;
            left: 20px;
            width: 20px;
            height: 20px;
            z-index: 400;
        }
    }
}

.card {
    // margin-bottom: 1.875rem;
    background-color: $white;
    // position: relative;
    border: 0 solid transparent;
    border-radius: 1.375rem;
    box-shadow: 0 0 13px 0 rgba(82, 63, 105, 0.05);
    // height: calc(100% - 30px);
}

.card-body { padding: 1.875rem; }

.card-title {
    font-size: 20px;
    font-weight: 500;
    color: $black;
    text-transform: capitalize;
}

.card-header {
    border-color: $gray-100;
    position: relative;
    background: transparent;
    padding: 1.5rem 1.875rem 1.25rem;
    display: flex;
    justify-content: space-between;
    align-items: center;

    .card-title {
        margin-bottom: 0;
    }

    .subtitle {
        padding-top: 5px;
        font-size: 14px;
        line-height: 1.5;
    }
}

.card-footer {
    border-color: $gray-100;
    background: transparent;
    padding: 1.25rem 1.875rem;
}

@media only screen and (max-width: 575px) {
    // .card {
    //     margin-bottom: 0.938rem;
    //     height: calc(100% - 0.938rem);
    // }

    .card-body { padding: 1rem; }
    .card-header { padding: 1.25rem 1rem; }
}

.modal-content {
    border-radius: 1rem;
}

.bootstrap-select {
    display: block !important;
    width: unset !important;
}

.custom_modal {
    .modal-header,
    .modal-footer {
        border: none !important;
    }

    .modal-title {
        font-size: 20px;
        margin-bottom: 0;
        line-height: 1.5;
        font-weight: 600;
    }

    .modal-dialog-scrollable .modal-body {
        &::-webkit-scrollbar { width: 8px; }
        &::-webkit-scrollbar-track { background: #f1f1f1; }
        &::-webkit-scrollbar-thumb { background: #dbdbdb; }
        &::-webkit-scrollbar-thumb:hover { background: #bfbfbf; }
    }
}

.input-group-text svg path {
    fill: $white;
}

.modal-footer {
    .btn {
        min-width: 80px;
    }

    .submit_btn,
    .submit_btn:focus,
    .cancel_btn,
    .cancel_btn:focus {
        font-size: 16px;
        padding: 13px 6px;
        width: 60%;
    }

    .cancel_btn,
    .cancel_btn:focus {
        background: $primary !important;
        border-color: $primary !important;
    }
}


a > .patient-inner-border:hover {
    background-color: rgba(0, 0, 0, 0.15);
}

label.switch {
    position: relative;
    display: inline-block;
    min-width: 56px;
    width: 56px;
    height: 26px;

    input {
        opacity: 0;
        width: 0;
        height: 0;
    }
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    transition: 0.4s;

    &::before {
        position: absolute;
        content: "";
        height: 20px;
        width: 20px;
        left: 5px;
        bottom: 3px;
        background-color: white;
        transition: 0.4s;
    }

    &.round {
        border-radius: 34px;
    }

    &.round::before {
        border-radius: 50%;
    }
}

input:checked + .slider,
.slider.slider-active {
    background-color: $primary;
}

input:focus + .slider {
    box-shadow: 0 0 1px #2196f3;
}

input:checked + .slider::before {
    transform: translateX(26px);
    transform: translateX(26px);
    transform: translateX(26px);
}

.noasterisks .asteriskField {
    display: none;
}

// For add_another widgets
select.select2widget + .select2.select2-container {
    width: calc(100% - 40px) !important;
    border-radius: 0.75rem;
}

.btn.submit_btn,
.btn.cancel_btn {
    padding: 10px 15px;
}

.submit_btn_center {
    text-align: center;
}
/* ... */

